fix z-index of the admin overlay

--- a/themes/jpecadmin/custom.css
+++ b/themes/jpecadmin/custom.css
@@ -98,3 +98,7 @@ body.adminimal-theme.adminimal-skin-material fieldset {
 .adminimal-theme input[type="submit"], input.form-submit {
   margin-right: 5px;
 }
+
+.adminimal-theme .ui-widget-overlay {
+  z-index: 100;
+}
